[package]
name = "reqwest_fun"
version = "0.1.0"
authors = ["Lucas Alison de Lima <lucasalison.lima926@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
serde = { version = "1.0.99" , features = ["derive"] }
serde_derive = "1.0.99"