[package]
name = "serde_fun"
version = "0.1.0"
authors = ["Lucas Alison de Lima <lucas.alison@orsegups.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0.40"